<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.myquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/full_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="text"
            android:padding="16dp" />

        <CheckBox
            android:id="@+id/take_quiz_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:text="@string/take_quiz"
            android:onClick="enableDisableSubmit"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/questions"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:layout_margin="8dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q1_a1_radio"
                    android:text="@string/q1_a1"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q1_a2_radio"
                    android:text="@string/q1_a2"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q1_a3_radio"
                    android:text="@string/q1_a3"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q1_a4_radio"
                    android:text="@string/q1_a4"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:layout_margin="8dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q2_a1_radio"
                    android:text="@string/q2_a1"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q2_a2_radio"
                    android:text="@string/q2_a2"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q2_a3_radio"
                    android:text="@string/q2_a3"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q2_a4_radio"
                    android:text="@string/q2_a4"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:layout_margin="8dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q3_a1_radio"
                    android:text="@string/q3_a1"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q3_a2_radio"
                    android:text="@string/q3_a2"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q3_a3_radio"
                    android:text="@string/q3_a3"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q3_a4_radio"
                    android:text="@string/q3_a4"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:layout_margin="8dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q4_a1_radio"
                    android:text="@string/q4_a1"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q4_a2_radio"
                    android:text="@string/q4_a2"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q4_a3_radio"
                    android:text="@string/q4_a3"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q4_a4_radio"
                    android:text="@string/q4_a4"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:layout_margin="8dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q5_a1_radio"
                    android:text="@string/q5_a1"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q5_a2_radio"
                    android:text="@string/q5_a2"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q5_a3_radio"
                    android:text="@string/q5_a3"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q5_a4_radio"
                    android:text="@string/q5_a4"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:onClick="answerRadioButtonClicked" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:onClick="submitQuiz"
            android:text="@string/submit"
            android:id="@+id/submit_button"/>

    </LinearLayout>
</ScrollView>